// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<body>
  <div>
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
    <button
      class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
      type="button"
    >
      <div
        class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
      />
      <span
        class="relative z-10"
      >
        Button
      </span>
    </button>
  </div>
</body>
`;

exports[`Button should render 2`] = `
<body>
  <div>
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
    <div
      class="flex flex-row gap-8"
    >
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          No Icon
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          Left Icon
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <div
              class="text-gray-50"
              height="20"
              width="20"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <div
              class="text-gray-50"
              height="20"
              width="20"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          Right Icon
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
            <div
              class="text-gray-50"
              height="20"
              width="20"
            />
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
            <div
              class="text-gray-50"
              height="20"
              width="20"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button should render 3`] = `
<body>
  <div>
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
    <div
      class="flex flex-row gap-8"
    >
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          default
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          small
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-8 px-4 text-14/button gap-1 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-8 px-4 text-14/button gap-1 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          medium
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          large
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-12 px-6 text-16/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-12 px-6 text-16/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button should render 4`] = `
<body>
  <div>
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
    <div
      class="flex flex-row gap-8"
    >
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          default
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          solid
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-500 !text-gray-50 disabled:bg-gray-150 disabled:text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          outlinedPrimary
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-transparent border border-primary-500 !text-primary-500 disabled:border-gray-300 disabled:!text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12] !bg-primary-500"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-transparent border border-primary-500 !text-primary-500 disabled:border-gray-300 disabled:!text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12] !bg-primary-500"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          outlinedAssertive
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-transparent border border-gray-300 !text-gray-950 disabled:!text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-transparent border border-gray-300 !text-gray-950 disabled:!text-gray-350 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          textPrimary
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-transparent !text-primary-500 disabled:!text-gray-350 !px-2 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12] !bg-primary-500"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-transparent !text-primary-500 disabled:!text-gray-350 !px-2 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12] !bg-primary-500"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          textAssertive
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-transparent !text-gray-600 disabled:!text-gray-350 !px-2 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-transparent !text-gray-600 disabled:!text-gray-350 !px-2 h-10 px-5 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
